# cortex

./: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  PHASE.md  README.md  compose.minimal.yml  compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
apps/cortex-admin/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/cortex-admin/src/: Admin.test.tsx  main.tsx
apps/cortex-ai-worker/: Dockerfile  README.md  pyproject.toml
apps/cortex-ai-worker/src/: main.py
apps/cortex-ai-worker/src/cortex_ai_worker/: __init__.py  config.py  database.py  main.py
apps/cortex-ai-worker/src/cortex_ai_worker/api/routes/: health.py  search.py
apps/cortex-ai-worker/src/cortex_ai_worker/embedding/: base.py  cohere.py  ollama.py  openai.py  registry.py
apps/cortex-ai-worker/src/cortex_ai_worker/vector/: index_manager.py
apps/cortex-ai-worker/src/cortex_ai_worker/workers/: consumer.py  embedding_worker.py
apps/cortex-ai-worker/tests/: conftest.py  test_consumer.py  test_embedding_providers.py  test_health.py  test_index_manager.py  test_main.py
apps/cortex-cli/: go.mod  main.go  main_test.go
apps/cortex-server/: drizzle.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/cortex-server/src/: app.ts  config.ts  index.ts
apps/cortex-server/src/db/: index.ts  seed.ts
apps/cortex-server/src/db/migrations/: 0000_quick_bloodstorm.sql  0001_living_goblin_queen.sql  0002_bizarre_boomer.sql  0003_fancy_mariko_yashida.sql  0004_hybrid_search_vector.sql
apps/cortex-server/src/db/schema/: api-keys.ts  audit-log.ts  content-entries.ts  content-types.ts  index.ts  schema.test.ts  sessions.ts  users.ts  webhooks.ts
apps/cortex-server/src/graphql/: builder.ts  context.ts  graphql.test.ts  index.ts  scalars.ts
apps/cortex-server/src/graphql/dataloaders/: content-entry.ts  index.ts
apps/cortex-server/src/graphql/mutations/: content-entries.ts  content-types.ts
apps/cortex-server/src/lib/: events.ts  logger.ts
apps/cortex-server/src/modules/: sample.ts
apps/cortex-server/src/plugins/: cors.ts  helmet.ts  index.ts  rate-limit.ts  swagger.ts
apps/cortex-server/src/routes/: health.test.ts  health.ts  index.ts  search.ts  webhooks.ts
scripts/: check-env.sh
(+51 files in other folders)
