[project]
name = "cortex-ai-worker"
version = "0.1.0"
description = "Cortex CMS AI pipeline worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.3",
    "uvicorn>=0.27.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
