[project]
name = "cortex-ai-worker"
version = "0.2.0"
description = "Cortex CMS AI pipeline worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.6",
    "uvicorn>=0.27.1",
    "asyncpg>=0.30",
    "redis>=5.2",
    "httpx>=0.28",
    "structlog>=24.4",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.3",
    "openai>=1.57",
    "cohere>=5.11",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "testcontainers[postgres,redis]>=4.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "ANN001"]
"src/cortex_ai_worker/vector/index_manager.py" = ["S608"]
"src/cortex_ai_worker/workers/embedding_worker.py" = ["N815"]
"src/cortex_ai_worker/config.py" = ["S105"]
"src/cortex_ai_worker/api/routes/search.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_ai_worker"]
